CSS: avoid left-right jumps

--- a/static/style.css
+++ b/static/style.css
@@ -52,6 +52,10 @@ a:focus {
  * Some global definitions
  */
 
+html {
+  overflow-y: scroll;
+}
+
 body {
   background: #f8f8f9;
   background-image: url("back.png");
